objects/sf_devops__Repository__c.object
<CustomObject>
    <description>A repository represents an external version control system.</description>
    <fields>
        <fullName>sf_devops__Default_Branch__c</fullName>
        <description>The name of the default branch in this repository.</description>
        <label>Default Branch</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Owner__c</fullName>
        <description>If the provider is &apos;GitHub&apos;, this represents the owner of the repository.</description>
        <label>GitHub Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Repo__c</fullName>
        <description>If the provider is &apos;GitHub&apos;, this represents the repository name.</description>
        <label>GitHub Repo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Last_Event__c</fullName>
        <description>This stores a unique identifier for the last event that we received from the external VCS for this Repository.</description>
        <label>Last Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Named_Credential__c</fullName>
        <description>The DeveloperName value of the NamedCredential to use to connect to this environment.</description>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Polling_Interval__c</fullName>
        <description>This stores the suggested polling interval for asking the external VCS for this Repository&apos;s events, in seconds.</description>
        <label>Polling Interval</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Provider__c</fullName>
        <defaultValue>&apos;GitHub&apos;</defaultValue>
        <description>The version control system provider that hosts this project.</description>
        <label>Provider</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bitbucket</fullName>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>GitLab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Repository</label>
    <listViews>
        <fullName>TestGroup_Repository</fullName>
        <filterScope>Queue</filterScope>
        <label>TestGroup</label>
        <queue>TestGroup</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf_devops__GitHub_Properties</fullName>
        <active>true</active>
        <description>Enforces that Owner and Repo are only set for GitHub repositories.</description>
        <errorConditionFormula>AND(
  ISNEW(),
   NOT(ISPICKVAL( sf_devops__Provider__c , &quot;GitHub&quot;)),
  NOT(AND (
    ISBLANK( sf_devops__GitHub_Owner__c),
    ISBLANK( sf_devops__GitHub_Repo__c)
  ))
)</errorConditionFormula>
        <errorMessage>GitHub_Repo and GitHub_Owner can only be set for GitHub repositories.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__No_Property_Changes</fullName>
        <active>true</active>
        <description>Enforces that certain fields cannot be changed.</description>
        <errorConditionFormula>AND(
  OR (
    ISCHANGED( sf_devops__Provider__c ) ,
    ISCHANGED(  sf_devops__GitHub_Owner__c  ) ,
    ISCHANGED(  sf_devops__GitHub_Repo__c  ) 
  )
)</errorConditionFormula>
        <errorMessage>This field cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Require_GitHub_Properties</fullName>
        <active>true</active>
        <description>Enforces that Owner and Repo are set for GitHub repositories.</description>
        <errorConditionFormula>AND(
  ISNEW(),
   ISPICKVAL( sf_devops__Provider__c , &quot;GitHub&quot;),
  OR (
    ISBLANK( sf_devops__GitHub_Owner__c),
    ISBLANK( sf_devops__GitHub_Repo__c)
  )
)</errorConditionFormula>
        <errorMessage>Repo and Owner are required for GitHub repositories.</errorMessage>
    </validationRules>
</CustomObject>